force-app/main/default/objects/Contact/fields/Contact_from_member_registration_page__c.field-meta.xml
<CustomField>
    <fullName>Contact_from_member_registration_page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact from member registration page</label>
    <type>Checkbox</type>
</CustomField>