force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Manager</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Salesperson</fullName>
            </value>
            <value>
                <fullName>Big Deal Salesperson (+15 sales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>