force-app/main/default/objects/Contact/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>