force-app/main/default/objects/Contact/fields/gnx__Last_delivery_link__c.field-meta.xml
<CustomField>
    <fullName>gnx__Last_delivery_link__c</fullName>
    <label>Lien du dernier envoi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>