force-app/main/default/objects/Contact/fields/Recipient_contract_signed__c.field-meta.xml
<CustomField>
    <fullName>Recipient_contract_signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient contract signed</label>
    <type>Checkbox</type>
</CustomField>