force-app/main/default/objects/Contact/fields/Recipient_lead_not_touched_alert__c.field-meta.xml
<CustomField>
    <fullName>Recipient_lead_not_touched_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient lead not touched alert</label>
    <type>Checkbox</type>
</CustomField>