force-app/main/default/objects/Contact/fields/Recipient_of_Entry_Alert__c.field-meta.xml
<CustomField>
    <fullName>Recipient_of_Entry_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient of Entry Alert</label>
    <type>Checkbox</type>
</CustomField>