force-app/main/default/objects/Contact/fields/Recipient_opportunity_lost_price_alert__c.field-meta.xml
<CustomField>
    <fullName>Recipient_opportunity_lost_price_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient opportunity lost price alert</label>
    <type>Checkbox</type>
</CustomField>