force-app/main/default/objects/Contact/fields/Recipient_to_contract_expiered_alert__c.field-meta.xml
<CustomField>
    <fullName>Recipient_to_contract_expiered_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient to contract expiered alert</label>
    <type>Checkbox</type>
</CustomField>