force-app/main/default/objects/Contact/fields/Voicenter_Name_Validation__c.field-meta.xml
<CustomField>
    <fullName>Voicenter_Name_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validation that if marked prevents users from changing account name. Created by Voicenter in order to prevent users from changing the name of the default entity.</description>
    <inlineHelpText>במידה ומסומנת התיבה, לא יהיה ניתן לשנות את שם החשבון.</inlineHelpText>
    <label>Voicenter Name Validation</label>
    <type>Checkbox</type>
</CustomField>