force-app/main/default/objects/Contact/validationRules/VoicenterDefaultContactNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>VoicenterDefaultContactNameValidation</fullName>
    <active>true</active>
    <description>Can not change default record name. Voicenter.</description>
    <errorConditionFormula>AND(
Voicenter_Name_Validation__c = TRUE,
ISCHANGED(  FirstName )  || ISCHANGED(   LastName ) 
)</errorConditionFormula>
    <errorMessage>לא ניתן לשנות שם של חשבון דיפולטיבי. וויסנטר.</errorMessage>
</ValidationRule>