force-app/main/default/objects/Contact/listViews/Broker_Contacts.listView-meta.xml
<ListView>
    <fullName>Broker_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Broker</value>
    </filters>
    <label>Broker Contacts</label>
</ListView>