force-app/main/default/objects/Contact/listViews/Rooms_s_Employees.listView-meta.xml
<ListView>
    <fullName>Rooms_s_Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Date_of_birth__c</columns>
    <columns>National_ID__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Rooms</value>
    </filters>
    <label>Rooms&apos;s Employees</label>
</ListView>